[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Art/Backgrounds/game_background_3. 2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/MZmapsprites/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/dragon pack/attack1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/sword.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/boomerang.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/Button/Normal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/Button/Pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/Button/Hover.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/m3x6.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/ModeSelection.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 256
font_data = ExtResource( 9 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="ModeSelection" type="Node2D"]
pause_mode = 2
script = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 794, 443 )
scale = Vector2( 0.834517, 0.834517 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1238.28, 377.282 )
rotation = -0.412472
scale = Vector2( 5.96083, 5.96083 )
texture = ExtResource( 3 )
flip_h = true

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 262.87, 679.369 )
rotation = -0.23038
scale = Vector2( 2.25722, 2.25722 )
texture = ExtResource( 2 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 354.87, 472.369 )
rotation = -0.472654
scale = Vector2( 0.534365, 0.534365 )
texture = ExtResource( 4 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 1107, 581 )
rotation = 0.78242
scale = Vector2( 5.00408, 5.00408 )
texture = ExtResource( 5 )

[node name="Medium" type="TextureButton" parent="."]
margin_left = 597.0
margin_top = 377.0
margin_right = 1749.0
margin_bottom = 1025.0
rect_scale = Vector2( 0.28834, 0.115987 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="MediumText" type="RichTextLabel" parent="Medium"]
margin_left = 277.45
margin_top = -103.46
margin_right = 594.45
margin_bottom = 14.54
rect_scale = Vector2( 2.90257, 7.00816 )
mouse_filter = 1
theme = SubResource( 2 )
text = "Medium"

[node name="Hard" type="TextureButton" parent="."]
margin_left = 597.0
margin_top = 509.0
margin_right = 1749.0
margin_bottom = 1157.0
rect_scale = Vector2( 0.28834, 0.115987 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="HardText" type="RichTextLabel" parent="Hard"]
margin_left = 391.898
margin_top = -120.703
margin_right = 708.898
margin_bottom = -2.70313
rect_scale = Vector2( 2.76959, 7.1895 )
mouse_filter = 1
theme = SubResource( 2 )
text = "Hard
"
scroll_active = false

[node name="Asian" type="TextureButton" parent="."]
margin_left = 597.0
margin_top = 638.0
margin_right = 1749.0
margin_bottom = 1286.0
rect_scale = Vector2( 0.28834, 0.115987 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="AsianText" type="RichTextLabel" parent="Asian"]
margin_left = 367.621
margin_top = -86.2168
margin_right = 684.621
margin_bottom = 31.7832
rect_scale = Vector2( 2.95637, 6.84081 )
mouse_filter = 1
theme = SubResource( 2 )
text = "Asian"

[node name="Title1" type="RichTextLabel" parent="."]
modulate = Color( 0, 1, 0.811765, 1 )
margin_left = 451.0
margin_top = 23.0
margin_right = 978.0
margin_bottom = 222.0
rect_scale = Vector2( 0.845861, 0.845861 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
text = "Guardian
"
scroll_active = false

[node name="Title1_2" type="RichTextLabel" parent="."]
margin_left = 891.0
margin_top = 95.0
margin_right = 1360.0
margin_bottom = 643.0
rect_scale = Vector2( 0.402621, 0.402621 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
text = "of the"

[node name="Title2" type="RichTextLabel" parent="."]
modulate = Color( 1, 0.309804, 0.309804, 1 )
margin_left = 398.0
margin_top = 134.0
margin_right = 1268.0
margin_bottom = 397.0
rect_scale = Vector2( 0.868863, 0.868863 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 4 )
text = "Dreamy World"

[connection signal="pressed" from="Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="Asian" to="." method="_on_Asian_pressed"]
